--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "csv-parse": "^2.0.0",
     "express": "^4.16.2",
     "node-fetch": "^1.7.3"
+  },
+  "devDependencies": {
+    "request": "^2.83.0"
   }
 }
